@@ -4,10 +4,18 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.8
 
 	- Documentation updates (STR #2785)
+	- The web interface "move jobs" operation redirected users to
+	  the wrong URL (STR #2815)
+	- The Polish web interface translation contained errors
+	  (STR #2815)
+	- The scheduler did not report PostScript printer PPDs with
+	  filters as PostScript devices.
+	- The scheduler did not set the job document-format attribute
+	  for jobs submitted using Create-Job and Send-Document.
 	- cupsFileTell() did not work for log files opened in append
 	  mode (STR #2810)
 	- The scheduler did not set QUERY_STRING all of the time
-	  for CGI scripts (STR #2781)
+	  for CGI scripts (STR #2781, STR #2816)
 	- The scheduler now returns an error for bad job-sheets
 	  values (STR #2775)
 	- Authenticated remote printing did not work over domain
